# wffilter

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  filter.rs  io.rs  main.rs  mashmap.rs  paf.rs  types.rs
src/filter/: filter.rs  index.rs  mod.rs  types.rs
src/paf/: mod.rs  paf.rs
src/wflambda/: macros.rs  mod.rs  types.rs  utils.rs  wflambda.rs
