[package]
name = "wffilter"
version = "0.1.0"
authors = ["Njagi Mwaniki <njagi@urbanslug.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coitrees = "0.2.1"
rayon = "1.5.1"
wflambda-rs = { git = "https://github.com/urbanslug/wflambda-rs" }
clap = "^2.33.0"
chrono = "0.4"