[package]
name = "wffilter"
version = "0.0.1-alpha"
authors = ["Njagi Mwaniki <njagi+bio@njagi.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coitrees = "0.2.1"
rayon = "1.5.1"
wflambda = { git = "https://github.com/urbanslug/wflambda.git" }
clap = "^2.33.0"
chrono = "0.4"
indicatif = { version = "0.16.2", features = ["rayon"] }
console = "0.14.1"